2010-08-10  Asa Ayers  <Asa.Ayers@Gmail.com>

- Changed the ArkInventory rule to consider items with no competition to be profitable.
- Ticket 27 - Added the ability to select your preferred auction adodn if multiple are available.

2010-08-08  Asa Ayers  <Asa.Ayers@Gmail.com>

- Removed some debugging code and added some code to prevent ItemAuditor from crashing if debug code gets released.

2010-08-07  Asa Ayers  <Asa.Ayers@Gmail.com>

- Removed references to Skillet in core functionality. Skillet really should be optional.

2010-08-03  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed a bug introduced last night where in some cases there was an error caused by DataStore:GetAuctionHouseItemCount returning nil instead of 0 as I expected.

2010-08-05  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed Bug 22 - Exchanging player bags for bank bags changes invested
- Fixed Bug 23 - When you purchase multiple stacks of the same item and it is one you have not invested in yet, ItemAuditor mistakenly counted items you have not yet pulled from the mail as items you already owned. This resulted in those items being counted twice.

2010-08-01  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed the tooltip so that it is green if the auction price exactly matches your threshold.
- Changed the QuickAuctions decider to consider the number already owned and only calculate based on what needs to be crated.
- Fixed the QuickAuctions decider to return the number of items to be created instead of the number of times to create. This makes a difference with things like Runescroll of Fortitude where 5 are created at once.
- Fixed a problem with how prices were being pulled from Auctioneer.

2010-07-29  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed a bug where tradeskill that don't produce items, like Inscription Research, cause IA to crash.
- Added some API enhancements.
- Added ArkInventory as an optional dependency so it will be loaded before IA.

2010-07-28  Asa Ayers  <Asa.Ayers@Gmail.com>
